@startuml

title __DOWNLOAD's Class Diagram__\n

  namespace com.aaron.justlike {
    namespace common {
      namespace http.download {
        class com.aaron.justlike.common.http.download.AriaApp {
            - mModeContainer : LinkedHashMap<String, Integer>
            {static} - sAriaApp : AriaApp
            {static} + getInstance()
            + getMode()
            + startDownload()
            - AriaApp()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace http.download {
        class com.aaron.justlike.common.http.download.DownloadIntentService {
            - mNotificationId : int
            - mPath : String
            - mPhotoName : String
            + DownloadIntentService()
            + onDownloadComplete()
            + onDownloadFailure()
            + onDownloadProgress()
            # onHandleIntent()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace http.download {
        class com.aaron.justlike.common.http.download.DownloadService {
            {static} - CHANNEL_ID : String
            {static} - CHANNEL_NAME : String
            - mDownloadUrl : String
            + DownloadService()
            + onBind()
            - getNotification()
            - getNotificationManager()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace http.download {
        class com.aaron.justlike.common.http.download.DownloadService.DownloadBinder {
            + startDownload()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace http.download {
        class com.aaron.justlike.common.http.download.DownloadTask {
            {static} + TYPE_FAILURE : int
            {static} + TYPE_PAUSE : int
            {static} + TYPE_SUCCESS : int
            - isPaused : boolean
            - mLatestProgress : int
            + DownloadTask()
            # doInBackground()
            # onPostExecute()
            # onProgressUpdate()
            - getContentLength()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace http.download {
        interface com.aaron.justlike.common.http.download.IDownloadListener {
            {abstract} + onFailure()
            {abstract} + onPause()
            {abstract} + onProgress()
            {abstract} + onSuccess()
        }
      }
    }
  }
  

  com.aaron.justlike.common.http.download.DownloadIntentService -up-|> android.app.IntentService
  com.aaron.justlike.common.http.download.DownloadService -up-|> android.app.Service
  com.aaron.justlike.common.http.download.DownloadService o-- com.aaron.justlike.common.http.download.DownloadService.DownloadBinder : mBinder
  com.aaron.justlike.common.http.download.DownloadService o-- com.aaron.justlike.common.http.download.DownloadTask : mDownloadTask
  com.aaron.justlike.common.http.download.DownloadService o-- com.aaron.justlike.common.http.download.IDownloadListener : mListener
  com.aaron.justlike.common.http.download.DownloadService +-down- com.aaron.justlike.common.http.download.DownloadService.DownloadBinder
  com.aaron.justlike.common.http.download.DownloadService.DownloadBinder -up-|> android.os.Binder
  com.aaron.justlike.common.http.download.DownloadTask -up-|> android.os.AsyncTask
  com.aaron.justlike.common.http.download.DownloadTask o-- com.aaron.justlike.common.http.download.IDownloadListener : mListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
